--- a/hw/hw.vcxproj
+++ b/hw/hw.vcxproj
@@ -130,11 +130,13 @@
     <ClCompile Include="FRead.cpp" />
     <ClCompile Include="GameRule.cpp" />
     <ClCompile Include="hw.cpp" />
+    <ClCompile Include="Random.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FRead.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="GameRule.h" />
+    <ClInclude Include="Random.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
